--- a/notes_django.ipynb
+++ b/notes_django.ipynb
@@ -617,11 +617,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "id": "b1875ca7",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Returning HTML"
    ]
@@ -678,6 +676,58 @@
     "        return HttpResponse(response_data)\n",
     "    except:\n",
     "        return HttpResponseNotFound(\"This month not supported.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "11b85e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "monthly_challenges = {\n",
+    "    \"january\": \"Eat no meat for entire month.\",\n",
+    "    \"february\": \"Walk for atleast 20 minutes everyday.\",\n",
+    "    \"march\": \"Learn Django for at least 20 minutes everyday.\",\n",
+    "    \"april\": \"Eat no meat for entire month.\",\n",
+    "    \"may\": \"Walk for atleast 20 minutes everyday.\",\n",
+    "    \"june\": \"Learn Django for at least 20 minutes everyday.\",\n",
+    "    \"july\": \"Eat no meat for entire month.\",\n",
+    "    \"august\": \"Walk for atleast 20 minutes everyday.\",\n",
+    "    \"september\": \"Learn Django for at least 20 minutes everyday.\",\n",
+    "    \"october\": \"Eat no meat for entire month.\",\n",
+    "    \"november\": \"Walk for atleast 20 minutes everyday.\",\n",
+    "    \"december\": \"Learn Django for at least 20 minutes everyday.\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def index():\n",
+    "    months = list(monthly_challenges.keys())\n",
+    "    print(len(months))\n",
+    "    month_list = []\n",
+    "    for month in months:\n",
+    "        month = f\"<li>{month}</li>\"\n",
+    "        month_list.append(month)\n",
+    "    print(month_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "49fe3d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "['<li>january</li>', '<li>february</li>', '<li>march</li>', '<li>april</li>', '<li>may</li>', '<li>june</li>', '<li>july</li>', '<li>august</li>', '<li>september</li>', '<li>october</li>', '<li>november</li>', '<li>december</li>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "index()"
    ]
   }
  ],
